// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VoteView /> should not render when our ouf range percentage 1`] = `""`;

exports[`<VoteView /> should not render when our ouf range percentage on mobile 1`] = `""`;

exports[`<VoteView /> should not render when step is finished 1`] = `
<VoteViewstyle__Container
  key="43"
  left={43}
  right={57}
>
  <div>
    <div>
      <div
        className="circle"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="0-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="1-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="2-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="circle red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="0-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="1-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="2-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
  </div>
  <div>
    <span>
      <span
        className="progressBar"
      />
    </span>
    <span>
      <span
        className="progressBar red"
      />
    </span>
  </div>
  <div>
    <Text
      as="span"
      className="for-percentage"
      color="neutral-gray.900"
      fontWeight="semibold"
    >
      <Text
        as="span"
      >
        12 argument.show.type.for
      </Text>
    </Text>
    <Text
      as="span"
      className="against-percentage"
      color="neutral-gray.900"
      fontWeight="semibold"
    >
      <Text
        as="span"
      >
        15 argument.show.type.against
      </Text>
    </Text>
  </div>
</VoteViewstyle__Container>
`;

exports[`<VoteView /> should not render when step is finished on mobile 1`] = `
<ForwardRef
  justify="space-between"
  position="relative"
  width="100%"
>
  <VoteView__MobileTextPercentage
    color="green.500"
  >
    12
     
    <FormattedMessage
      id="argument.show.type.for"
      tagName={Symbol(react.fragment)}
      values={Object {}}
    />
  </VoteView__MobileTextPercentage>
  <AppBox
    bg="green.500"
    flex={43}
    height="2px"
    left={0}
    position="absolute"
    width="43%"
  />
  <VoteView__MobileTextPercentage
    color="red.500"
  >
    15
     
    <FormattedMessage
      id="argument.show.type.against"
      tagName={Symbol(react.fragment)}
      values={Object {}}
    />
  </VoteView__MobileTextPercentage>
  <AppBox
    bg="red.500"
    flex={57}
    height="2px"
    left="43%"
    position="absolute"
    width="57%"
  />
</ForwardRef>
`;

exports[`<VoteView /> should render correctly 1`] = `
<VoteViewstyle__Container
  key="42"
  left={42}
  right={58}
>
  <div>
    <div>
      <div
        className="circle"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="0-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="1-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="2-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="circle red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="0-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="1-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="2-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
  </div>
  <div>
    <span>
      <span
        className="progressBar"
      />
    </span>
    <span>
      <span
        className="progressBar red"
      />
    </span>
  </div>
  <div>
    <Text
      as="span"
      className="for-percentage"
      color="neutral-gray.900"
      fontWeight="semibold"
    >
      42%
    </Text>
    <Text
      as="span"
      className="against-percentage"
      color="neutral-gray.900"
      fontWeight="semibold"
    >
      58%
    </Text>
  </div>
</VoteViewstyle__Container>
`;

exports[`<VoteView /> should render correctly on mobile 1`] = `
<ForwardRef
  justify="space-between"
  position="relative"
  width="100%"
>
  <VoteView__MobileTextPercentage
    color="green.500"
  >
    42%
     
    <FormattedMessage
      id="argument.show.type.for"
      tagName={Symbol(react.fragment)}
      values={Object {}}
    />
  </VoteView__MobileTextPercentage>
  <AppBox
    bg="green.500"
    flex={42}
    height="2px"
    left={0}
    position="absolute"
    width="42%"
  />
  <VoteView__MobileTextPercentage
    color="red.500"
  >
    58%
     
    <FormattedMessage
      id="argument.show.type.against"
      tagName={Symbol(react.fragment)}
      values={Object {}}
    />
  </VoteView__MobileTextPercentage>
  <AppBox
    bg="red.500"
    flex={58}
    height="2px"
    left="42%"
    position="absolute"
    width="58%"
  />
</ForwardRef>
`;

exports[`<VoteView /> should render correctly when 0% positive 1`] = `
<VoteViewstyle__Container
  key="0"
  left={0}
  right={100}
>
  <div>
    <div
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="circle red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="0-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="1-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="2-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="3-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="4-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="5-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
  </div>
  <div>
    <span>
      <span
        className="progressBar"
      />
    </span>
    <span>
      <span
        className="progressBar red"
      />
    </span>
  </div>
  <div>
    <Text
      as="span"
      className="against-percentage"
      color="neutral-gray.900"
      fontWeight="semibold"
    >
      100%
    </Text>
  </div>
</VoteViewstyle__Container>
`;

exports[`<VoteView /> should render correctly when 0% positive on mobile 1`] = `
<ForwardRef
  justify="space-between"
  position="relative"
  width="100%"
>
  <VoteView__MobileTextPercentage
    color="green.500"
  >
    0%
     
    <FormattedMessage
      id="argument.show.type.for"
      tagName={Symbol(react.fragment)}
      values={Object {}}
    />
  </VoteView__MobileTextPercentage>
  <AppBox
    bg="green.500"
    flex={0}
    height="2px"
    left={0}
    position="absolute"
    width="0%"
  />
  <VoteView__MobileTextPercentage
    color="red.500"
  >
    100%
     
    <FormattedMessage
      id="argument.show.type.against"
      tagName={Symbol(react.fragment)}
      values={Object {}}
    />
  </VoteView__MobileTextPercentage>
  <AppBox
    bg="red.500"
    flex={100}
    height="2px"
    left="0%"
    position="absolute"
    width="100%"
  />
</ForwardRef>
`;

exports[`<VoteView /> should render correctly when 100% positive 1`] = `
<VoteViewstyle__Container
  key="100"
  left={100}
  right={0}
>
  <div>
    <div>
      <div
        className="circle"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="0-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="1-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="2-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="3-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="4-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="5-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <div
        className="circle red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
  </div>
  <div>
    <span>
      <span
        className="progressBar"
      />
    </span>
    <span>
      <span
        className="progressBar red"
      />
    </span>
  </div>
  <div>
    <Text
      as="span"
      className="for-percentage"
      color="neutral-gray.900"
      fontWeight="semibold"
    >
      100%
    </Text>
  </div>
</VoteViewstyle__Container>
`;

exports[`<VoteView /> should render correctly when 100% positive on mobile 1`] = `
<ForwardRef
  justify="space-between"
  position="relative"
  width="100%"
>
  <VoteView__MobileTextPercentage
    color="green.500"
  >
    100%
     
    <FormattedMessage
      id="argument.show.type.for"
      tagName={Symbol(react.fragment)}
      values={Object {}}
    />
  </VoteView__MobileTextPercentage>
  <AppBox
    bg="green.500"
    flex={100}
    height="2px"
    left={0}
    position="absolute"
    width="100%"
  />
  <VoteView__MobileTextPercentage
    color="red.500"
  >
    0%
     
    <FormattedMessage
      id="argument.show.type.against"
      tagName={Symbol(react.fragment)}
      values={Object {}}
    />
  </VoteView__MobileTextPercentage>
  <AppBox
    bg="red.500"
    flex={0}
    height="2px"
    left="100%"
    position="absolute"
    width="0%"
  />
</ForwardRef>
`;

exports[`<VoteView /> should render correctly when NaN 1`] = `
<VoteViewstyle__Container
  key="0"
  left={0}
  right={100}
>
  <div>
    <div
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="circle red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="0-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="1-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="2-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="3-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="4-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="5-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
  </div>
  <div>
    <span>
      <span
        className="progressBar"
      />
    </span>
    <span>
      <span
        className="progressBar red"
      />
    </span>
  </div>
  <div>
    <Text
      as="span"
      className="against-percentage"
      color="neutral-gray.900"
      fontWeight="semibold"
    >
      100%
    </Text>
  </div>
</VoteViewstyle__Container>
`;
